<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="General">
        <CheckBoxPreference
            android:key="enable_automatic_subscription"
            android:title="Enable Automatic Track Subscription"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/codec_title">
        <ListPreference
            android:key="audio_codec"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_audio_codec" />
        <ListPreference
            android:key="video_codec"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_video_codec" />
        <CheckBoxPreference
            android:key="vp8_simulcast"
            android:title="@string/vp8_simulcast"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/sender_bandwidth_constraints">
        <EditTextPreference
            android:key="sender_max_audio_bitrate"
            android:title="@string/max_audio_bitrate"
            android:defaultValue="0"/>
        <EditTextPreference
            android:key="sender_max_video_bitrate"
            android:title="@string/max_video_bitrate"
            android:defaultValue="0" />
    </PreferenceCategory>
</PreferenceScreen>